--- a/app/assets/stylesheets/game.css.sass
+++ b/app/assets/stylesheets/game.css.sass
@@ -3,3 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body
   background-color: black
+
+.rightbar
+  color: white
+  left: 840px
+  position: absolute
