Bunch of updates

--- a/app/assets/stylesheets/game.css.sass
+++ b/app/assets/stylesheets/game.css.sass
@@ -1,10 +1,18 @@
 // Place all the styles related to the matching controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//= require banner
+
 body
   background-color: black
 
 .rightbar
   color: white
   left: 840px
+  top: 50%
   position: absolute
+
+body
+  padding: 0
+  margin: 0
+
