--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <div id="banner-container">
+    <div id="banner"><a href="http://github.com/danielheath/furious-earth">Fork me on GitHub</a></div></div>
 
 <%= yield %>
 
