Add tablet controls at /tablet

--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -1,3 +1,8 @@
+  <%= javascript_include_tag "keypress" %>
+
+<div id="banner-container">
+<div id="banner"><a href="http://github.com/danielheath/furious-earth">Fork me on GitHub</a></div></div>
+
 <div class="rightbar" >
 
 <p>Player 1 starts with the yellow ship (the flash) and uses wasd to steer and q to fire</p>
