--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,13 @@
 <html>
 <head>
   <title>Ships</title>
+
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=0.3, maximum-scale=1.0, user-scalable=0">
 </head>
 <body>
-
 <%= yield %>
 
 </body>
