--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ships</title>
+  <title>Furious Earth</title>
 
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
